--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.21",
     "vue": "^2.6.10"
   },
   "devDependencies": {
